p5 làm phần popular p1

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,14 @@ body {
 a {
   text-decoration: none;
 }
+.heading-lv2 {
+  color: #171100;
+  font-family: var(--font-heading);
+  font-size: 3.8rem;
+  font-weight: 700;
+  line-height: 1.27;
+  letter-spacing: -0.76px;
+}
 .btn {
   display: inline block;
   line-height: 50px;
@@ -216,4 +224,36 @@ a {
 }
 .hero .stats strong:nth-child(2) {
   margin-left: 28px;
+}
+.popular {
+  padding: 65px;
+  margin-top: 135px;
+}
+.popular-top {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
+.popular-top .desc {
+  margin-top: 16px;
+  width: 458px;
+  color: #5f5b53;
+  font-size: 1.8rem;
+  line-height: 1.67;
+}
+.popular-top .control-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: transparent;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+}
+.popular-top .control-btn:hover {
+  background: var(--primary-color);
+  color: #fff;
+  cursor: pointer;
 }
