--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,18 @@ a {
   margin-left: auto;
   margin-right: auto;
 }
+.line-clamp {
+  display: -webkit-box;
+  -webkit-line-clamp: var(--line-clamp, 1);
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+.line-clamp.line-2 {
+  --line-clamp: 2;
+}
+.break-all {
+  word-break: break-all;
+}
 /* ==============header================ */
 .header {
   background: #fffcf4;
@@ -271,6 +283,7 @@ a {
   object-fit: cover;
 }
 .popular .course-item {
+  flex: 1;
   border-radius: 12px;
   border: 1px solid #e2dfda;
   background: #fff;
