--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -400,40 +400,40 @@ a {
   cursor: default;
 }
 /* =============fetures 1============ */
-.fetures {
+.features {
   margin-top: 135px;
   padding: 65px 0;
 }
-.fetures .body {
+.features .body {
   display: flex;
   justify-content: space-between;
 }
-.fetures .images {
+.features .images {
   display: flex;
   gap: 30px;
 }
-.fetures .images img {
+.features .images img {
   width: 270px;
   height: 405px;
   object-fit: cover;
   border-radius: 16px;
 }
-.fetures .lower {
+.features .lower {
   margin-top: 34px;
 }
-.fetures .content {
+.features .content {
   width: 41%;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-.fetures .desc {
+.features .desc {
   margin-top: 16px;
   color: #5f5b53;
   font-size: 1.6rem;
   line-height: 1.75;
 }
-.fetures .cta-btn {
+.features .cta-btn {
   width: 137px;
   height: 50px;
   margin-top: 32px;
@@ -444,16 +444,16 @@ a {
   background-color: var(--primary-color);
 }
 /* =============fetures 2============ */
-.fetures-2nd .body {
+.features-2nd .body {
   flex-direction: row-reverse;
 }
-.fetures-2nd {
+.features-2nd {
   margin-top: 70px;
 }
-.fetures-2nd .content {
+.features-2nd .content {
   width: 49%;
 }
-.fetures-2nd .img img {
+.features-2nd .img img {
   width: 470px;
   height: 440px;
 }
