--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,7 @@ a {
   width: 12px;
   height: 2px;
   border-radius: 1px;
-  background: #171100;
+  background-color: #171100;
   display: block;
   position: absolute;
   left: 21px;
@@ -456,4 +456,85 @@ a {
 .features-2nd .img img {
   width: 470px;
   height: 440px;
+}
+/* ==================Blogs============= */
+.blog {
+  margin-top: 135px;
+  padding: 96px 0px;
+  background: #fffcf4;
+}
+
+.blog .blog-top {
+  text-align: center;
+}
+.blog .blog-top .desc {
+  width: 460px;
+  font-size: 1.6rem;
+  line-height: 1.75;
+  text-align: center;
+  color: #696262;
+  margin: 16px auto 0;
+}
+.blog .blog-list {
+  gap: 30px;
+  display: flex;
+  margin-top: 55px;
+}
+.blog .item {
+  width: 33.33%;
+  background-color: #fff;
+  border-radius: 16px;
+}
+.blog .item:hover {
+  box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.05);
+}
+.blog .item .thumb {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  border-radius: 16px 16px 0px 0px;
+}
+.blog .item .info {
+  padding: 20px 20px 28px;
+}
+.blog .item .date {
+  padding: 12px;
+  position: relative;
+  color: #5f5b53;
+  font-size: 1.4rem;
+  line-height: 1.86;
+  display: inline-flex;
+  align-items: center;
+}
+.blog .item .date::before {
+  content: "";
+  margin-right: 4px;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  display: inline-block;
+  background-color: var(--primary-color);
+}
+.blog .item .date::after {
+  left: 0;
+  bottom: 0;
+  position: absolute;
+  content: "";
+  display: inline-block;
+  right: -27px;
+  height: 1px;
+  border-radius: 0.5px;
+  background: #e2dfda;
+}
+.blog .item .title {
+  margin-top: 12px;
+  font-size: 1.6rem;
+  line-height: 1.75;
+  color: #171100;
+}
+.blog .item .btn {
+  margin-top: 12px;
+}
+.blog .item .btn:hover {
+  background-color: var(--primary-color);
 }
