--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -476,12 +476,14 @@ a {
   margin: 16px auto 0;
 }
 .blog .blog-list {
+  overflow: hidden;
   gap: 30px;
   display: flex;
   margin-top: 55px;
 }
 .blog .item {
-  width: 33.33%;
+  flex-shrink: 0;
+  width: calc(33.33% - 20px);
   background-color: #fff;
   border-radius: 16px;
 }
@@ -534,7 +536,25 @@ a {
 }
 .blog .item .btn {
   margin-top: 12px;
+  font-size: 1.4rem;
 }
 .blog .item .btn:hover {
+  background-color: var(--primary-color);
+}
+.blog .dots {
+  display: flex;
+  gap: 6px;
+  justify-content: center;
+  margin-top: 38px;
+}
+.blog .dot {
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: #5f5b53;
+  cursor: pointer;
+}
+.blog .dot.active {
+  cursor: default;
   background-color: var(--primary-color);
 }
